--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base-redux-toolkit",
+  "name": "todo-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -41,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "lint-staged": "^13.1.1",
+    "prettier": "^2.8.4"
   }
 }
